[tool.poetry]
name = "vosekast_control"
version = "0.1.0"
description = ""
authors = ["Karl Wolffgang <karl_eugen.wolffgang@tu-dresden.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
pyserial = "^3.4"
gmqtt = "^0.6.2"
uvloop = {version = "^0.14.0",  markers = "sys_platform == 'linux'" }
"RPi.GPIO" = {version = "^0.7.0", markers = "platform_machine == 'armv7l'" }
rpi = {git = "https://github.com/nosix/raspberry-gpio-emulator/", markers = "platform_machine != 'armv7l'"}

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
rope = "^0.16.0"
autopep8 = "^1.5"

[tool.poetry.scripts]
dev = 'vosekast_control.scripts:dev'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
